<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Hoops Mobile</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="age_hint">Возраст</string>

    <string name="home_title">Рик и Морти</string>
    <string name="welcome_user">Добро пожаловать!</string>
    <string name="btn_logout">Выйти</string>
    <string name="btn_settings">Настройки</string>

    <string name="intro_title">Добро пожаловать в Hooper!</string>
    <string name="intro_subtitle">Минималистично читай</string>
    <string name="btn_start">Начать</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Тёмная тема</string>
    <string name="settings_text_size">Размер текста</string>
    <string name="text_small">Малый</string>
    <string name="text_medium">Средний</string>
    <string name="text_large">Большой</string>
    <string name="settings_language">Язык интерфейса</string>

    <string name="settings_data_management">Управление данными</string>
    <string name="file_info_not_found">Файл не найден</string>
    <string name="backup_info_none">Резервная копия: Нет</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_restore">Восстановить</string>

    <string name="login_title">Вход</string>
    <string name="btn_login_action">Войти</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="btn_to_register">Зарегистрироваться</string>

    <string name="register_title">Регистрация</string>
    <string name="gender_male">Мужчина</string>
    <string name="gender_female">Женщина</string>
    <string name="btn_register_action">Зарегистрироваться</string>

    <string name="btn_reset">Сбросить настройки</string>


</resources>